# yeet

./: .devenv.flake.nix  .gitignore  Cargo.toml  README.md  default.nix  devenv.nix  devenv.yaml  flake.nix  module.nix  rustfmt.toml  yeet-agent.nix  yeet-server.nix
.devenv/: input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db  tasks.db-shm  tasks.db-wal
assets/: yeet_logo.psd
book/: book.toml  mermaid-init.js
book/src/: SUMMARY.md  intro.md  overview.md  quickstart.md  roadmap.md  server-setup.md
book/src/developer/: auth.md  detach.md  endpoints.md  varlink.md
modules/nixos/: yeet-agent.nix  yeet-server.nix  yeet.nix  yeetd.nix
share/polkit-1/actions/: ch.yeetme.yeet.policy
templates/default/: .gitignore  devshell.nix  flake.nix
templates/default/.config/: yeet.toml
templates/default/hosts/my-darwin/: darwin-configuration.nix
templates/default/hosts/my-nixos/: configuration.nix
templates/default/hosts/mynixos/: configuration.nix
yeet-agent/: Cargo.toml
yeet-agent/src/: agent.rs  cachix.rs  cli.rs  cli_args.rs  display.rs  lib.rs  main.rs  nix.rs  notification.rs  polkit.rs  section.rs  section_impls.rs  server.rs  server_cli.rs  status.rs  systemd.rs  varlink.rs  version.rs
yeet-agent/src/cli/: approve.rs  detach.rs  host.rs  hosts.rs  publish.rs
yeet-agent/src/sig/: ssh.rs
yeet-api/: Cargo.toml
yeet-api/src/: httpsig.rs  key.rs  lib.rs  status.rs
yeet-server/: Cargo.toml
yeet-server/src/: claim.rs  error.rs  httpsig.rs  jwt.rs  lib.rs  main.rs  state.rs
yeet-server/src/routes/: detach.rs  host.rs  key.rs  register.rs  status.rs  system_check.rs  token.rs  update.rs  verify.rs
yeet-ui/: Cargo.toml  Trunk.toml  index.html
yeet-ui/src/: app.rs  lib.rs  main.rs  tools.rs
yeet-ui/src/widgets/: host.rs
