[workspace]
members = [ "yeet-agent","yeet-api", "yeet-server"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"
non-ascii-idents = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
missing_docs_in_private_items = "allow"
implicit_return = "allow"
question_mark_used = "allow"
separated_literal_suffix = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
missing_trait_methods = "allow"
shadow_reuse = "allow"
pub_with_shorthand = "allow"
single_call_fn = "allow"
self_named_module_files = "allow"
absolute_paths = "allow"
module_name_repetitions = "allow"
ref_patterns = "allow"
multiple_crate_versions = "allow"
