[workspace]
members = ["yeet-agent", "yeet-api", "yeet-server"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
mac-notification-sys = { git = "https://github.com/h4llow3En/mac-notification-sys" }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"
non-ascii-idents = "deny"
missing_docs = "allow"                                  # Remove in 1.0

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
missing_docs_in_private_items = "allow"
implicit_return = "allow"
question_mark_used = "allow"
separated_literal_suffix = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
missing_trait_methods = "allow"
shadow_reuse = "allow"
pub_with_shorthand = "allow"
single_call_fn = "allow"
self_named_module_files = "allow"
absolute_paths = "allow"
module_name_repetitions = "allow"
ref_patterns = "allow"
multiple_crate_versions = "allow"
default_trait_access = "allow"
shadow_unrelated = "allow"
iter_over_hash_type = "allow"
missing-inline-in-public-items = "allow"
arbitrary_source_item_ordering = "allow"
allow_attributes_without_reason = "allow"
