[package]
name = "yeet-agent"
version = "0.1.0"
edition = "2024"
categories = []
keywords = ["nix", "deployment", "pull-based"]
repository = "https://github.com/Srylax/yeet"
license = "AGPL-3.0-or-later"
readme = "README.MD"
description = "Pull-based NixOs deployment agent"


[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yeet-api = { path = "../yeet-api" }
anyhow = "1.0"
url = { version = "2.5", features = ["serde"] }
notify-rust = "4.11"
clap = { version = "4.5", features = ["derive","string"] }
ssh-key = { version = "0.6", features = ["serde", "ed25519"] }
ed25519-dalek = { version = "2.1", features = ["serde", "pem", "pkcs8"] }
env_logger = "0.11"
log = "0.4"

http = "1.3.1"


[lints]
workspace = true
