[package]
name = "yeet"
version = "0.4.1"
edition = "2024"
categories = []
keywords = ["nix", "deployment", "pull-based"]
repository = "https://github.com/Srylax/yeet"
license = "AGPL-3.0-or-later"
readme = "README.MD"
description = "Pull-based NixOs deployment agent"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
api = { path = "../yeet-api", package="yeet-api"}
url = { version = "2.5", features = ["serde"] }
notify-rust = "4.11"
clap = { version = "4.5", features = ["derive","string"] }
ssh-key = { version = "0.6", features = ["serde", "ed25519"] }
ed25519-dalek = { version = "2.1", features = ["serde", "pem", "pkcs8"] }
env_logger = "0.11"
log = "0.4"
httpsig-hyper = "0.0.19"
tokio = { version = "1.49", features = ["full", "full"] } # TODO: maybe switch to smoll?

http = "1.3.1"
figment = { version = "0.10", features = ["toml", "env"] }
xdg = "3.0.0"
jiff = {version = "0.2", features = []}
similar = { version = "2.7.0", features = ["unicode"] }
console = "0.16.1"
backon = "1.6.0"
rootcause = "0.11.0"
tempfile = "3.23.0"
shadow-rs = { version = "1.5", default-features = false }
zlink = "0.2.0"
futures-util = "0.3.31"
nix = {version = "0.30.1", features = ["user"]}
thiserror = "2.0.17"
inquire = "0.9.1"
ssh2-config = "0.6.5"

# TODO: ssh-agent-client-rs = "1.1.2"

[build-dependencies]
shadow-rs = "1.5"

[lints]
workspace = true
