[package]
name = "yeet-api"
version = "0.1.0"
edition = "2024"
categories = []
keywords = ["nix", "deployment", "pull-based"]
repository = "https://github.com/Srylax/yeet"
license = "AGPL-3.0-or-later"
readme = "README.MD"
description = "Pull-based NixOs deployment server+agent"

[lints]
workspace = true

[dependencies]
jiff = {version = "0.2", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
serde_json_any_key = "2.0"
httpsig-hyper = "0.0.19"
reqwest = { version = "0.12", features = ["json"] }
http = "1.3"
thiserror = "2.0"
ahash = { version = "0.8.12", features = ["std"] }
ssh-key = { version = "0.6", features = ["serde", "ed25519"] }




[dev-dependencies]
tokio = { version = "1.47", features = ["macros"] }
