[package]
name = "yeet-server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
yeet-api = { path = "../yeet-api" }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
memmap2 = "0.9.4"
jsonwebtoken = "9.3.0"
rand_hc = "0.3.2"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.81"
axum_thiserror = "0.1.0"
thiserror = "1.0.63"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
