[package]
name = "yeet-server"
version = "0.1.0"
edition = "2024"
categories = []
keywords = ["nix", "deployment", "pull-based"]
repository = "https://github.com/Srylax/yeet"
license = "AGPL-3.0-or-later"
readme = "README.MD"
description = "Pull-based NixOs deployment server+agent"

[lints]
workspace = true


[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
yeet-api = { path = "../yeet-api" }
parking_lot = { version = "0.12", features = ["arc_lock"] }
memmap2 = "0.9"
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ssh-key = { version = "0.6", features = ["serde", "ed25519"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
serde_json_any_key = "2.0"


[dev-dependencies]
axum-test = "17.2"
paste = "1.0"
